[package]
name = "isuconquest"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-multipart = "0.4"
actix-web = "4"
bcrypt = "0.13"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
futures-util = "0.3"
itertools = "0.10"
listenfd = "1"
num-traits = "0.2"
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "mysql", "decimal"] }
thiserror = "1"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
